changed openapi definition to openapi 3.0.0
