# packages/api/openapi.yaml
@@ -1,10 +1,10 @@
-swagger: "2.0"
+openapi: 3.0.1
 info:
-  version: 1.0.0
   title: Venture Capitol API
   description: Open API specification for the Venture Capitol API
-host: localhost:8101
-basePath: "/v2"
+  version: 1.0.0
+servers:
+  - url: http://localhost:8101/
 tags:
   - name: company
     description: API for company information
@@ -14,366 +14,386 @@ tags:
     description: API for decision information
   - name: decision
     description: API for task information
-schemes:
-  - https
-  - http
-securityDefinitions:
-  UserSecurity:
-    type: basic
-security:
-  - UserSecurity: []
 paths:
-  "/user/{userId}":
+  /user/{userId}:
     get:
       tags:
         - user
       summary: Get a user by id
       description: Returns a user with given id
       operationId: findUserById
-      produces:
-        - application/json
-        - application/xml
       parameters:
         - name: userId
           in: path
           description: ID of the user
           required: true
-          type: string
-      responses:
-        "200":
-          description: successful operation
           schema:
-            "$ref": "#/definitions/User"
-        "400":
+            type: string
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User"
+            application/xml:
+              schema:
+                $ref: "#/components/schemas/User"
+        400:
           description: Invalid status value
-  "/company":
+          content: {}
+  /company:
     post:
       tags:
         - company
       summary: Adds a new company to Venture Capitol
       description: Posts a company with given data
       operationId: addCompany
-      parameters:
-        - in: body
-          name: company
-          description: company which will be founded
-          required: true
-          schema:
-            required:
-              - LegalForm
-            type: object
-            properties:
-              legalForm:
-                type: string
-              name:
-                type: string
+      requestBody:
+        description: company which will be founded
+        content:
+          "*/*":
+            schema:
+              type: object
+              properties:
+                legalForm:
+                  type: string
+                name:
+                  type: string
+        required: true
       responses:
-        "200":
+        200:
           description: Success
-        "400":
-          description: The request was invalid. The parameters LegalForm and optional name must be set in the requestBody.
-  "/company/{companyId}":
+          content: {}
+        400:
+          description:
+            The request was invalid. The parameters LegalForm and optional
+            name must be set in the requestBody.
+          content: {}
+      x-codegen-request-body-name: company
+  /company/{companyId}:
     get:
       tags:
         - company
       summary: Get a company by id
       description: Returns a company with given id
       operationId: findCompanyById
-      produces:
-        - application/json
-        - application/xml
       parameters:
         - name: companyId
           in: path
           description: ID of the company
           required: true
-          type: string
-      responses:
-        "200":
-          description: successful operation
           schema:
-            "$ref": "#/definitions/Company"
-        "400":
+            type: string
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Company"
+            application/xml:
+              schema:
+                $ref: "#/components/schemas/Company"
+        400:
           description: Invalid status value
+          content: {}
     delete:
       tags:
         - company
       summary: Delete a company by id
       description: Deletes a company with given id
       operationId: deleteCompanyById
-      produces:
-        - application/json
-        - application/xml
       parameters:
         - name: companyId
           in: path
           required: true
-          type: string
+          schema:
+            type: string
       responses:
-        "200":
+        200:
           description: successful operation
-        "400":
+          content: {}
+        400:
           description: Invalid ID supplied
-        "404":
+          content: {}
+        404:
           description: Company not found
-  "/company/{companyId}/tasks":
+          content: {}
+  /company/{companyId}/tasks:
     get:
       tags:
         - task
       summary: Get all tasks of a company
       description: Returns which tasks of a company are done
       operationId: findAllTasksByCompanyId
-      produces:
-        - application/json
-        - application/xml
       parameters:
         - name: companyId
           in: path
           description: ID of the company
           required: true
-          type: string
-      responses:
-        "200":
-          description: successful operation
           schema:
-            type: array
-            items:
-              "$ref": "#/definitions/CompletedTask"
-        "400":
+            type: string
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/CompletedTask"
+            application/xml:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/CompletedTask"
+        400:
           description: Invalid status value
-  "/company/{companyId}/tasks/{taskId}":
+          content: {}
+  /company/{companyId}/tasks/{taskId}:
     post:
       tags:
         - task
       summary: Add a checked task to a company
       description: Adds a new finished task to a company
       operationId: addTaskToCompany
-      produces:
-        - application/json
-        - application/xml
       parameters:
         - name: companyId
           in: path
           description: ID of the company
           required: true
-          type: string
+          schema:
+            type: string
         - name: taskId
           in: path
           description: ID of the task
           required: true
-          type: string
+          schema:
+            type: string
       responses:
-        "200":
+        200:
           description: successful operation
-        "400":
+          content: {}
+        400:
           description: Invalid status value
+          content: {}
     delete:
       tags:
         - task
       summary: Delete a task from a company
       description: Deletes a task from a company
       operationId: deleteTaskFromCompany
-      produces:
-        - application/json
-        - application/xml
       parameters:
         - name: companyId
           in: path
           description: ID of the company
           required: true
-          type: string
+          schema:
+            type: string
         - name: taskId
           in: path
           description: ID of the task
           required: true
-          type: string
+          schema:
+            type: string
       responses:
-        "200":
+        200:
           description: successful deletion
-        "400":
+          content: {}
+        400:
           description: Invalid ID supplied
-        "404":
+          content: {}
+        404:
           description: Company or task not found
-  "/company/{companyId}/decisions":
+          content: {}
+  /company/{companyId}/decisions:
     get:
       tags:
         - decision
       summary: Get all decisions of a company
       description: Returns all decisions of a company
       operationId: findAllDecisionsByCompanyId
-      produces:
-        - application/json
-        - application/xml
       parameters:
         - name: companyId
           in: path
           description: ID of the company
           required: true
-          type: string
-      responses:
-        "200":
-          description: successful operation
           schema:
-            type: array
-            items:
-              "$ref": "#/definitions/MadeDecision"
-        "400":
+            type: string
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/MadeDecision"
+            application/xml:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/MadeDecision"
+        400:
           description: Invalid status value
-  "/company/{companyId}/decision/{decisionId}":
+          content: {}
+  /company/{companyId}/decision/{decisionId}:
     post:
       tags:
         - decision
       summary: Add a decision to a company
       description: Adds a new decision to a company
       operationId: addDecisionToCompany
-      produces:
-        - application/json
-        - application/xml
       parameters:
         - name: companyId
           in: path
           description: ID of the company
           required: true
-          type: string
+          schema:
+            type: string
         - name: decisionId
           in: path
           description: ID of the decision
           required: true
-          type: string
-        - name: selectedPath
-          in: body
-          description: Selected path of the decision
-          required: true
           schema:
-            type: integer
+            type: string
+      requestBody:
+        description: Selected path of the decision
+        content:
+          "*/*":
+            schema:
+              type: integer
+        required: true
       responses:
-        "200":
+        200:
           description: successful operation
-        "400":
+          content: {}
+        400:
           description: Invalid status value
+          content: {}
+      x-codegen-request-body-name: selectedPath
     delete:
       tags:
         - decision
       summary: Delete a decision from a company
       description: Deletes a decision from a company
       operationId: deleteDecisionFromCompany
-      produces:
-        - application/json
-        - application/xml
       parameters:
         - name: companyId
           in: path
           description: ID of the company
           required: true
-          type: string
+          schema:
+            type: string
         - name: decisionId
           in: path
           description: ID of the decision
           required: true
-          type: string
+          schema:
+            type: string
       responses:
-        "200":
+        200:
           description: successful deletion
-        "400":
+          content: {}
+        400:
           description: Invalid ID supplied
-        "404":
+          content: {}
+        404:
           description: Company or decision not found
-definitions:
-  User:
-    type: object
-    required:
-      - id
-      - companies
-    properties:
-      id:
-        type: string
-      companies:
-        type: array
-        xml:
-          wrapped: true
-        items:
+          content: {}
+components:
+  securitySchemes:
+    firebaseAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
+  schemas:
+    User:
+      required:
+        - companies
+        - id
+      type: object
+      properties:
+        id:
+          type: string
+        companies:
+          type: array
           xml:
-            name: Companies
-          "$ref": "#/definitions/Company"
-    xml:
-      name: User
-  CompletedTask:
-    type: object
-    required:
-      - companyId
-      - taskId
-    properties:
-      company:
-        type: object
-        "$ref": "#/definitions/Company"
-      companyId:
-        type: string
-      taskId:
-        type: string
-    xml:
-      name: CompletedTask
-  MadeDecision:
-    type: object
-    required:
-      - companyId
-      - decisionId
-      - selectedPath
-    properties:
-      decisionId:
-        type: string
-      company:
-        type: object
-        "$ref": "#/definitions/Company"
-      companyId:
-        type: string
-      selectedPath:
-        type: integer
-        format: int32
-    xml:
-      name: MadeDecision
-  Company:
-    type: object
-    required:
-      - name
-      - id
-      - legalForm
-    properties:
-      id:
-        type: string
-      name:
-        type: string
-      users:
-        type: array
-        xml:
-          wrapped: true
-        items:
+            wrapped: true
+          items:
+            $ref: "#/components/schemas/Company"
+      xml:
+        name: User
+    CompletedTask:
+      required:
+        - companyId
+        - taskId
+      type: object
+      properties:
+        company:
+          $ref: "#/components/schemas/Company"
+        companyId:
+          type: string
+        taskId:
+          type: string
+      xml:
+        name: CompletedTask
+    MadeDecision:
+      required:
+        - companyId
+        - decisionId
+        - selectedPath
+      type: object
+      properties:
+        decisionId:
+          type: string
+        company:
+          $ref: "#/components/schemas/Company"
+        companyId:
+          type: string
+        selectedPath:
+          type: integer
+          format: int32
+      xml:
+        name: MadeDecision
+    Company:
+      required:
+        - id
+        - legalForm
+        - name
+      type: object
+      properties:
+        id:
+          type: string
+        name:
+          type: string
+        users:
+          type: array
           xml:
-            name: Users
-          "$ref": "#/definitions/User"
-      legalForm:
-        type: string
-        enum:
-          - EINZELUNTERNEHMER
-          - GBR
-          - FREIBERUFLER
-          - PARTG
-          - UG
-          - GMBH
-      completedTask:
-        type: array
-        xml:
-          wrapped: true
-        items:
+            wrapped: true
+          items:
+            $ref: "#/components/schemas/User"
+        legalForm:
+          type: string
+          enum:
+            - EINZELUNTERNEHMER
+            - GBR
+            - FREIBERUFLER
+            - PARTG
+            - UG
+            - GMBH
+        completedTask:
+          type: array
           xml:
-            name: CompletedTask
-          "$ref": "#/definitions/CompletedTask"
-      madeDecision:
-        type: array
-        xml:
-          wrapped: true
-        items:
+            wrapped: true
+          items:
+            $ref: "#/components/schemas/CompletedTask"
+        madeDecision:
+          type: array
           xml:
-            name: MadeDecision
-          "$ref": "#/definitions/MadeDecision"
-    xml:
-      name: Company
+            wrapped: true
+          items:
+            $ref: "#/components/schemas/MadeDecision"
+      xml:
+        name: Company
